# Self-Study

./: .gitignore  README.md
Blockchain/: .gitignore
C/Baekjoon/: 1000.c  10809.c  10818.c  10871.c  15596.c  2739.c  4344.c  9498.c  tempCodeRunnerFile.c
C/BailyLesson/: condition.c  repeat.c  test_1.c  test_2.c  test_3.c
Javascript/: shallow_copy.js
Javascript/LINE/: 1.js  1.txt  2.js  3.js  4.js
Javascript/baekjun/: 1712.js  2798.js
Javascript/basics/: basics.js  input.js  recursive.js  test.txt
Javascript/lambda256/: 2차원배열회전.js  369게임.js  자리수곱.js  티켓예매.js
Javascript/mockTest/: my_solution.js  others.js
Linux/calendar/: README.md
Linux/datelog/: README.md  date_log.sh
Linux/practice/: Date_211210.txt  Date_211220.txt  IFS.sh  addArr.sh  alignArr.sh  array.sh  arrtest1.sh  arrtest2.sh  arrtest3.sh  assignArr.sh  asso_array.sh  awk.sh  backtick.sh  base.sh  bc.sh  calendar.sh  case.sh  case1.sh  commandSub.sh  date_log.sh  date_save  dialog.sh  expr.sh  extractionArr.sh  file-2021-12-18.txt  for.sh  globbing.sh  gugudan  gugudan.cpp  gugudan.sh  hello  hello.cpp  hello.sh  if-elif.sh  if-else.sh  index_cal.sh  iterationArr.sh  let.sh  location.sh  operator1.sh  (+9 more)
Rust/playground/: Cargo.toml
Rust/practice/ActixWebTaskService/: Cargo.toml
Rust/practice/ActixWebTaskService/api/: task.rs
Rust/practice/ActixWebTaskService/src/: main.rs
Rust/practice/rust_on_aws/: Cargo.toml  rust_lambda_helper.zsh
Rust/practice/rust_on_aws/src/: main.rs
go/: README.md  go.mod  go.sum  main.go
golang/: README.md
python/: README.md  profile.pickle  score.txt
(+639 files in other folders)
