[package]
name = "rust_on_aws"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = { version = "^1.5.2", features = ["behavior-version-latest"] }
aws-sdk-s3 = "^1.35.0"
aws-sdk-dynamodb = "^1.35.0"
tokio = { version = "^1", features = ["full"] }
lambda_runtime = "^0.11.3"
serde = "^1"
serde_json = "^1"
serde_derive = "^1"
log = "^0.4"
simple_logger = "^5.0.0"
uuid = { version = "^1.8.0", features = ["v4"] }
tracing = "^0.1.40"
tracing-subscriber = "^0.3.18"